@@ -1,5 +1,6 @@
 Miek Gieben
 
 
-Ideas/Patches:
+Ideas/Patches/Testing:
 Boris Goldowsky
+Rado Hrabcak
